k8s/deployment-do.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <K8S_PREFIX>-dist
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <K8S_NAME>
  namespace: <K8S_PREFIX>-dist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <K8S_NAME>
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: <K8S_NAME>
    spec:
      containers:
      - name: <K8S_NAME>-container
        image: <DIGITALOCEAN_IMAGE>
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: <DIGITALOCEAN_REGISTRY>
---
apiVersion: v1
kind: Service
metadata:
  name: <K8S_NAME>-service
  namespace: <K8S_PREFIX>-dist
spec:
  selector:
    app: <K8S_NAME>
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <K8S_NAME>-ingress
  namespace: <K8S_PREFIX>-dist
spec:
  ingressClassName: nginx
  rules:
  - host: <K8S_DEPLOYMENT_DOMAIN>
    http:
      paths:
      - pathType: Prefix
        path: "/<K8S_NAME>/"
        backend:
          service:
            name: <K8S_NAME>-service
            port:
              number: 80
